pages/versions/v50.0.0/sdk/dev-client.mdx
---
title: DevClient
description: A library that allows creating a development build and includes useful development tools.
sourceCodeUrl: 'https://github.com/nxenv/nxenv/tree/main/packages/nxenv-dev-client'
packageName: 'nxenv-dev-client'
iconUrl: '/static/images/packages/nxenv-dev-client.png'
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import PlatformsSection from '~/components/plugins/PlatformsSection';
import { ConfigPluginExample, ConfigPluginProperties } from '~/ui/components/ConfigSection';

`nxenv-dev-client` adds various useful development tools to your debug builds:

- a configurable launcher UI, so you can launch updates (such as from [PR previews](/develop/development-builds/development-workflows#pr-previews)) and switch between development servers without needing to recompile the native app
- improved debugging tools (such as support for [inspecting network requests](/debugging/tools/#inspecting-network-requests))
- [a powerful and extensible developer menu UI](/debugging/tools#developer-menu)

Nxenv documentation refers to debug builds that include `nxenv-dev-client` as [development builds](/develop/development-builds/introduction/).

<PlatformsSection android emulator ios simulator />

## Installation

<APIInstallSection />

## Configuration in app.json/app.config.js

You can configure development client launcher using its built-in [config plugin](/config-plugins/introduction/) if you use config plugins in your project ([EAS Build](/build/introduction) or `npx nxenv run:[android|ios]`). The plugin allows you to configure various properties that cannot be set at runtime and require building a new app binary to take effect.

<ConfigPluginExample>

```json app.json
{
  "nxenv": {
    "plugins": [
      [
        "nxenv-dev-launcher",
        {
          "launchModeExperimental": "most-recent"
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'launchModeExperimental',
      description: [
        'Determines whether to launch the most recently opened project or navigate to the launcher screen.',
        '* `most-recent` - Attempt to launch directly into a previously opened project and if unable to connect, fall back to the launcher screen.',
        '* `launcher` - Opens the launcher screen.',
      ].join('\n'),
      default: '"most-recent"',
      experimental: true,
    },
  ]}
/>

## API

```js
import * as DevClient from 'nxenv-dev-client';
```

<APISection packageName={['nxenv-dev-menu', 'nxenv-dev-launcher']} apiName="DevClient" />
